[gd_scene load_steps=22 format=2]

[ext_resource path="res://Sprites/fire.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Fire.gd" type="Script" id=2]

[sub_resource type="Shader" id=18]
code = "shader_type canvas_item;

uniform vec4 flash_color : hint_color = vec4(1.0);
uniform vec4 glow_color : hint_color = vec4(1.0);
uniform float flash_modifier : hint_range(0.0, 1.0) = 0.0;
uniform float glow_modifier : hint_range(0.0, 1.0) = 0.0;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	color.rgb = color.rgb + glow_color.rgb * glow_modifier;
	color.rgb = mix(color.rgb, flash_color.rgb, flash_modifier);
	COLOR = color;
}
"

[sub_resource type="ShaderMaterial" id=29]
resource_local_to_scene = true
shader = SubResource( 18 )
shader_param/flash_color = Color( 0.956863, 0.286275, 0.105882, 1 )
shader_param/glow_color = Color( 0.956863, 0.286275, 0.105882, 1 )
shader_param/flash_modifier = 0.0
shader_param/glow_modifier = 0.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.5, 15 )

[sub_resource type="Animation" id=4]
resource_name = "Idle1"
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
resource_name = "Idle2"
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 3 ]
}

[sub_resource type="Animation" id=9]
resource_name = "Idle3"
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}

[sub_resource type="Animation" id=6]
resource_name = "Walk1"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 1, 2 ]
}

[sub_resource type="Animation" id=17]
resource_name = "Walk2"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 4, 5 ]
}

[sub_resource type="Animation" id=32]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Anchor/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 7, 8 ]
}

[sub_resource type="Animation" id=24]
resource_name = "Grow"
length = 0.333333
step = 0.0416667
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/glow_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0416667, 0.208333, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0, 1.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Anchor/GrowSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.125 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Anchor/GrowSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anchor/Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.0416667, 0.125, 0.208333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1.2, 1.2 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=25]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:material:shader_param/glow_modifier")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Anchor/GrowSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Anchor/GrowSprite:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Anchor/Sprite:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 14, 7 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 15.5, 15.5 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 13, 15.75 )

[sub_resource type="RectangleShape2D" id=30]
extents = Vector2( 18.5, 11 )

[sub_resource type="CircleShape2D" id=26]
radius = 110.018

[sub_resource type="CircleShape2D" id=27]
radius = 58.0

[sub_resource type="CircleShape2D" id=28]
radius = 137.0

[node name="Fire" type="KinematicBody2D"]
material = SubResource( 29 )
collision_layer = 0
collision_mask = 32
script = ExtResource( 2 )

[node name="Anchor" type="Position2D" parent="."]
use_parent_material = true

[node name="GrowSprite" type="Sprite" parent="Anchor"]
visible = false
use_parent_material = true
scale = Vector2( 1e-05, 1e-05 )
texture = ExtResource( 1 )
offset = Vector2( 1, -24 )
hframes = 3
vframes = 3
frame = 2

[node name="Sprite" type="Sprite" parent="Anchor"]
use_parent_material = true
texture = ExtResource( 1 )
offset = Vector2( 1, -24 )
hframes = 3
vframes = 3
frame = 2

[node name="Eatbox" type="Area2D" parent="Anchor"]
visible = false
collision_layer = 8
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Anchor/Eatbox"]
position = Vector2( 0.5, -14 )
shape = SubResource( 2 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/Idle1 = SubResource( 4 )
anims/Idle2 = SubResource( 8 )
anims/Idle3 = SubResource( 9 )
anims/RESET = SubResource( 5 )
anims/Walk1 = SubResource( 6 )
anims/Walk2 = SubResource( 17 )
anims/Walk3 = SubResource( 32 )

[node name="GrowAnim" type="AnimationPlayer" parent="."]
anims/Grow = SubResource( 24 )
anims/RESET = SubResource( 25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -7 )
shape = SubResource( 1 )

[node name="Hitbox" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2( 0.5, -14.5 )
shape = SubResource( 7 )

[node name="Absorber" type="Area2D" parent="."]
modulate = Color( 0.258824, 1, 0, 1 )
collision_layer = 2
collision_mask = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Absorber"]
position = Vector2( 0, -15.25 )
shape = SubResource( 31 )

[node name="killer" type="Area2D" parent="."]
modulate = Color( 0.258824, 1, 0, 1 )
collision_layer = 18
collision_mask = 16
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="killer"]
position = Vector2( -0.5, -6 )
shape = SubResource( 30 )

[node name="Tween" type="Tween" parent="."]

[node name="WanderRadius" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="WanderRadius"]
modulate = Color( 0.521569, 0, 1, 1 )
position = Vector2( 2, -8 )
shape = SubResource( 26 )

[node name="MoveTime" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="FleeArea" type="Area2D" parent="."]
collision_layer = 48
collision_mask = 48

[node name="CollisionShape2D" type="CollisionShape2D" parent="FleeArea"]
modulate = Color( 0, 1, 0.462745, 1 )
position = Vector2( 2, -8 )
shape = SubResource( 27 )

[node name="SafeArea" type="Area2D" parent="."]
collision_layer = 48
collision_mask = 48

[node name="CollisionShape2D" type="CollisionShape2D" parent="SafeArea"]
modulate = Color( 0, 1, 0.462745, 1 )
position = Vector2( 2, -8 )
shape = SubResource( 28 )

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
collision_mask = 32

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Absorber" to="." method="_on_Absorber_area_entered"]
[connection signal="body_entered" from="killer" to="." method="_on_killer_body_entered"]
[connection signal="timeout" from="MoveTime" to="." method="_on_MoveTime_timeout"]
[connection signal="body_entered" from="FleeArea" to="." method="_on_FleeArea_body_entered"]
[connection signal="body_exited" from="SafeArea" to="." method="_on_SafeArea_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
